--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,8 @@ target_sources(
         ${PROJECT_NAME}
         PRIVATE
         src/main.cpp
-        src/chip8.cpp
+        src/initialize.cpp
+        src/opcodes.cpp
 )
 target_include_directories(
         ${PROJECT_NAME}
